all errors fixed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Material UI URL Shortener Application</title>
+    <title>URL Shortener</title>
+    <meta name="description" content="A beautiful and functional URL shortener application built with React and Material-UI" />
   </head>
   <body>
     <div id="root"></div>
